2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	*include/constants.php, include/functions_reporting.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.php: into the report element
	"exception" added more conditions and rewrote the code.
	
	Fixes: #3607172

2013-03-08  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/graphs/flot/pandora.flot.js: Improve the view
	of events information in flot graphs for bug 3607101

	* godmode/agentes/module_manager_editor_network.php
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_network.php: Fix
	some bugs of module templates application and snmp modules edition

2013-03-07 Mario Pulido <mario.pulido@artica.es>

       *images/help/historyddbb.png,images/help/plugin1.png
       images/help/plugin2.png, images/help/plugin3.png
       include/help/es/help_plugin_definition.php
       include/help/es/help_history_database.php
       include/help/en/help_history_database.php
       include/help/en/help_plugin_definition.php: Modified plugin definition help.
       Add history database help.



2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	godmode/agentes/planned_downtime.editor.php, pandoradb.sql,
	pandoradb.postgreSQL.sql: added id_user to planned_downtime table
	for to know who create or updte any downtime.
	
	Fixes: #3607172

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Improve instructions
	in list and details view on agents and fix the bug of doesnt 
	show the owner in the list table when events are grouped. To fix
	it I added a couple of subqueries to the grouped query. Yes, I 
	checked the performance :) Bug: 3607097
