@@ -66,6 +66,11 @@ if ($stop_downtime) {
 		__('Unsuccesful stopped the Downtime'));
 	
 	if ($result) {
+		events_create_event ("Manual stop downtime  ".
+			$downtime['name'] . "(" . $downtime['id'] . ") by " .
+			$config['id_user'], 0, 0, EVENT_STATUS_NEW, $config["id_user"],
+			"system", 1);
+		
 		//Reenabled the Agents or Modules or alerts...depends of type
 		$downtime = db_get_row('tplanned_downtime', 'id', $id_downtime);
 		
